@@ -227,6 +227,11 @@ Release 0.22b.dev (unpublished)
   `docutils.nodes.Element.set_class()`
      Obsolete. Append to Element['classes'] directly.
 
+* Removed files:
+
+  ``tools/rst2odt_prepstyles.py``
+     Obsoleted by `docutils.writers.odf_odt.prepstyles`.
+
 * Bugfixes and improvements (see HISTORY_).
 
 .. _Docutils Document Model:
