@@ -101,6 +101,10 @@ Release 0.22b.dev (unpublished)
   - Do not increase indentation of follow-up lines inside inline elements.
     when formatting with `indents`_.
 
+* tools/rst2odt_prepstyles.py
+
+  - Removed. Use `docutils.writers.odf_odt.prepstyles`.
+
 
 Release 0.21.2 (2024-04-23)
 ===========================
